# nemotron-lens

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: tests.yml
src/nemotron_lens/: __init__.py  hooked_model.py  sae.py  topology.py
src/nemotron_lens/evals/: __init__.py  proxy.py  saebench.py
src/nemotron_lens/training/: __init__.py  modules.py  trainer.py
tests/: conftest.py  test_sae_io.py  test_topology_and_hooks.py  test_training.py
